--- a/frontend/src/app/modules/cluster/pages/cluster-list/cluster-list.component.html
+++ b/frontend/src/app/modules/cluster/pages/cluster-list/cluster-list.component.html
@@ -25,7 +25,7 @@
                 <div *ngIf="this.selectedCluster"
                     class="z-50 bg-white absolute top-2/4 left-3/4 flex w-40 h-auto flex-col shadow-2xl">
                     <div class="flex flex-row justify-between p-2">
-                        <span class="font-bold">{{this.selectedCluster.name}}</span>
+                        <span class="font-bold">{{this.selectedCluster.id}}</span>
                         <button (click)="selectedCluster = null">X</button>
                     </div>
                     <hr />
