fix: added ArubaKube S.r.l. in footer

--- a/frontend/src/app/modules/layout/components/footer/footer.component.html
+++ b/frontend/src/app/modules/layout/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <a
       class="text-gray-400 dark:text-night-300"
       href="https://github.com/ArubaKube/liqo-dashboard">
-        <span class="mr-2">© {{ year }}</span>
+        <span class="mr-2">© {{ year }}, ArubaKube S.r.l.</span>
     </a>
   </div>
 </div>
