feat: add liqo instance info page

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -97,3 +97,11 @@
 .swal2-container.swal2-center.swal2-backdrop-show #swal2-select {
 	margin: 0;
 }
+
+.status-healthy {
+  color: #16a34a;
+}
+
+.status-unhealthy {
+  color: #dc2626;
+}
